--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -3,7 +3,8 @@
 th:replace="~{fragments/layout :: layout (~{::body},'hello')}">
 <body>  
   <div class="container">    
-   <p th:text="${message}"/>  
+   <p th:text="${message}"/> 
+    <p th:text="hello test" />
   </div>
 </body>
 </html>
