--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -4,7 +4,7 @@ th:replace="~{fragments/layout :: layout (~{::body},'hello')}">
 <body>  
   <div class="container">    
    <p th:text="${message}"/> 
-    <p th:text="hello test" />
+    <p>hello test"</p>
   </div>
 </body>
 </html>
